add serial communicate
链接中增加Qt5SerialPortd.lib和Qt5SerialBusd.lib，否则会出现链接错误，串口尚未调通

--- a/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.ui
+++ b/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.ui
@@ -41,7 +41,7 @@
          </widget>
         </item>
         <item row="1" column="0" colspan="3">
-         <widget class="QTextEdit" name="textEdit"/>
+         <widget class="QTextEdit" name="textEditin"/>
         </item>
        </layout>
       </item>
