--- a/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.ui
+++ b/QtGuiVisionPrj/QtGuiVisionPrj/QtGuiVisionPrj.ui
@@ -19,17 +19,20 @@
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <layout class="QGridLayout" name="gridLayout_3">
-        <item row="0" column="0">
-         <widget class="QPushButton" name="CamshotBtn">
-          <property name="text">
-           <string>截图</string>
-          </property>
-         </widget>
+        <item row="1" column="2">
+         <widget class="QComboBox" name="PortBox"/>
         </item>
         <item row="0" column="1">
          <widget class="QPushButton" name="OpenCamBtn">
           <property name="text">
            <string>打开摄像头</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QPushButton" name="CamshotBtn">
+          <property name="text">
+           <string>截图</string>
           </property>
          </widget>
         </item>
@@ -40,8 +43,29 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0" colspan="3">
-         <widget class="QTextEdit" name="textEditin"/>
+        <item row="2" column="0" colspan="3">
+         <widget class="QTextEdit" name="textEditin">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="openSerialButton">
+          <property name="text">
+           <string>打开串口</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="closeSerialButton">
+          <property name="text">
+           <string>关闭串口</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
